sql/hive/src/test/resources/ql/src/test/queries/negative/macro_reserved_word.q
CREATE TEMPORARY MACRO DOUBLE (x DOUBLE) 1.0 / (1.0 + EXP(-x));
